--- a/flaskapp/templates/home.html
+++ b/flaskapp/templates/home.html
@@ -5,7 +5,7 @@
         <title>Flask Test</title>
     </head>
     <body>
-        <h1>Base Webpage in Flask</h1>
-        <p>eat my ass maanav</p>
+        <h1>Welcome to MicroScan</h1>
+        <a href="{{ url_for('about') }}">Upload an image</a>
     </body>
 </html>
