--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -5,7 +5,30 @@
         <title>About Page</title>
     </head>
     <body>
-        <h1>Title Here</h1>
-        <p>once more eat my ripe ass maanav</p>
+        <div>
+            <h1>Upload an image</h1>
+            <a href="{{ url_for('home') }}">Home</a>
+            <br>
+            <br>
+            <button>Upload image</button>
+            <br>
+            <br>
+            <form action="">
+                <input type="radio" name="phase1" value="phase1" aria-checked=""> Phase 1<br>
+                <input type="radio" name="phase2" value="phase2"> Phase 2<br>
+                <input type="radio" name="phase3" value="phase3"> Phase 3
+            </form>
+        </div>
+        <div>
+            <h1>Original Image</h1>
+            <img src="https://via.placeholder.com/400x300.png" />
+            <h1>Phase x</h1> 
+            <img src="https://via.placeholder.com/400x300.png" />
+            
+        </div>
+        <div>
+            <h1>Distribution Plot</h1>
+            <img src="https://via.placeholder.com/400x300.png" />
+        </div>
     </body>
 </html>
