--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -13,7 +13,7 @@
         <br>
         <br>
         <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
-            <input type="file" name="file" />
+            <input type="file" name="photo" />
             <input type="submit" />
         </form>
         <br>
