--- a/flaskapp/templates/home.html
+++ b/flaskapp/templates/home.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<link rel="stylesheet"/>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Flask Test</title>
+        <title>MicroScan</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     </head>
     <body>
         <h1>Welcome to MicroScan</h1>
