--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>About Page</title>
+    <title>MicroScan Upload</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 <body>
