--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -2,118 +2,147 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <meta charset="utf-8">
-    <title>MicroScan Upload</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <meta charset="utf-8">
+  <title>MicroScan Upload</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 <body>
-    <div>
-        <nav class="navbar is-black" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-              <a class="navbar-item">
-                <img src="./../static/Logo2.png">
-              </a>
-          
-              <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-              </a>
-            </div>
-          
-            <div id="navbarBasicExample" class="navbar-menu">
-              <div class="navbar-start navbar-item">
-                <a href="{{ url_for('home') }}" class="navbar-item">
-                    <strong>Home</strong>
-                  </a>
-                  <a href="{{ url_for('home') }}" class="navbar-item">
-                    Scraper
-                  </a>
-                <a href="{{ url_for('about') }}" class="button is-warning">
-                    Upload
-                </a>
-              </div>
-            </div>
-          </nav>
-          <div class="container">
+  <div>
+    <nav class="navbar is-black" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item">
+          <img src="./../static/Logo2.png">
+        </a>
 
-          
-        <div class="has-text-centered">
-            <br>
-            <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
-                <div id="file-js-example" class="file has-name is-boxed is-fullwidth">
-                    <label class=" file-label">
-                      <input class="file-input" type="file" name="photo">
-                      <span class="file-cta">
-                        <span class="file-icon">
-                          <i class="fas fa-upload"></i>
-                        </span>
-                        <span class="file-label">
-                          Upload a file
-                        </span>
-                      </span>
-                      <span class="file-name has-text-centered">
-                        Microstructure.jpg
-                      </span>
-                    </label>
-                  </div>
-                  <br>
-                <input class="button is-warning" type="submit"/>
-            </form>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+          data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start navbar-item">
+          <a href="{{ url_for('home') }}" class="navbar-item">
+            <strong>Home</strong>
+          </a>
+          <a href="{{ url_for('home') }}" class="navbar-item">
+            Scraper
+          </a>
+          <a href="{{ url_for('about') }}" class="button is-warning">
+            Upload
+          </a>
         </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="has-text-centered">
         <br>
         <div class="columns">
-            <div class="column">
-                <form action="{{ url_for('click') }}" method="POST" enctype="multipart/form-data">
-                    <div class="field">
-                        <p class="control has-icons-left">
-                          <span class="select is-primary">
-                            <select>
-                              <option>Phase 1</option>
-                              <option>Phase 2</option>
-                              <option>Phase 3</option>
-                            </select>
-                          </span>
-                          <span class="icon is-small is-left has-text-primary">
-                            <i class="fas fa-chart-pie"></i>
-                          </span>
-                        </p>
-                      </div>
-                </form>
-                <br><br><br>
-                <h1 class="is-size-3">Original Image</h1>
-                <img src="https://via.placeholder.com/400x300.png" />
-            </div>
-            <div class="column">
-                <h1 class="is-size-3">Phase x</h1>
-                <img src="https://via.placeholder.com/400x300.png" />
-                
-                <img src="{{ phase_img }}" alt=""/>
-                <h1 class="is-size-3">Distribution Plot</h1>
-        <img src="https://via.placeholder.com/400x300.png" />
-            </div>
-            
+          <div class="column">
+            <br><br><br><br>
+            <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
+              <div id="file-js-example" class="file has-name is-boxed is-fullwidth">
+                <label class=" file-label">
+                  <input class="file-input" type="file" name="photo">
+                  <span class="file-cta">
+                    <span class="file-icon">
+                      <i class="fas fa-upload"></i>
+                    </span>
+                    <span class="file-label">
+                      Upload a file
+                    </span>
+                  </span>
+                  <span class="file-name has-text-centered">
+                    Microstructure.jpg
+                  </span>
+                </label>
+              </div>
+              <br>
+              <input class="button is-warning" type="submit" />
+            </form>
+          </div>
+          <div class="column"> 
+            <h1 class="is-size-3">Original Image</h1>
+            <img src="https://via.placeholder.com/300x300.png" />
+          </div>
         </div>
+        
+      </div>
+      <br>
+      <div class="columns">
+        <div class="column">
+          <br>
+          <div class="card" style="max-width: 400px; height: 280px;">
+            <header class="card-header">
+              <p class="card-header-title">
+                Image Analysis
+              </p>
+              <a class="card-header-icon" aria-label="more options">
+                <span class="icon">
+                  <i class="fas fa-info-circle"></i>
+                </span>
+              </a>
+            </header>
+            <div class="card-content">
+              <div class="content">
+                <p>
+                  Average grain area: <strong id="gArea">1</strong><br>
+                  Average grain diameter: <strong id="gDia">2</strong><br>
+                  Phase fraction (dark): <strong id="pDark">3</strong><br>
+                  Phase fraction (light): <strong id="pLight">4</strong><br>
+                  Phase fraction (lines): <strong id="pLine">5</strong><br>
+                </p>
+
+              </div>
+            </div>
+          </div>
+          <br><br>
+          <h1 class="is-size-3">Grain Mask</h1>
+          <img src="https://via.placeholder.com/300x300.png" />
+          
+          
+        </div>
+        <div class="column">
+          <h1 class="is-size-3">Dark Phase</h1>
+          <img src="https://via.placeholder.com/300x300.png" />
+
+          <img src="{{ phase_img }}" alt="" />
+          <h1 class="is-size-3">Line Phase</h1>
+          <img src="https://via.placeholder.com/300x300.png" />
+        </div>
+        <div class="column">
+          <h1 class="is-size-3">Light Phase</h1>
+          <img src="https://via.placeholder.com/300x300.png" />
+
+          <img src="{{ phase_img }}" alt="" />
+          <h1 class="is-size-3">Distribution Plot</h1>
+          <img src="https://via.placeholder.com/300x300.png" />
+        </div>
+
+      </div>
     </div>
     <div>
-        
-       
+
+
 
     </div>
     <div>
-        
+
     </div>
-</div>
+  </div>
 </body>
 <script>
-    const fileInput = document.querySelector('#file-js-example input[type=file]');
-    fileInput.onchange = () => {
-      if (fileInput.files.length > 0) {
-        const fileName = document.querySelector('#file-js-example .file-name');
-        fileName.textContent = fileInput.files[0].name;
-      }
+  const fileInput = document.querySelector('#file-js-example input[type=file]');
+  fileInput.onchange = () => {
+    if (fileInput.files.length > 0) {
+      const fileName = document.querySelector('#file-js-example .file-name');
+      fileName.textContent = fileInput.files[0].name;
     }
-  </script>
+  }
+</script>
+
 </html>
