locked all result images to 350 by 350 px

--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -67,7 +67,7 @@
           </div>
           <div class="column"> 
             <h1 class="is-size-3">Original Image</h1>
-            <img src="{{ microscan_img_origin }}" alt="https://via.placeholder.com/300x300.png" />
+            <img src="{{ microscan_img_origin }}" alt="https://via.placeholder.com/300x300.png" width="350" height="350"/>
           </div>
         </div>
         
@@ -102,25 +102,25 @@
           </div>
           <br><br>
           <h1 class="is-size-3">Grain Mask</h1>
-          <img src="{{ microscan_img_grain }}" alt="https://via.placeholder.com/300x300.png" />
+          <img src="{{ microscan_img_grain }}" alt="https://via.placeholder.com/300x300.png"  width="350" height="350"/>
           
           
         </div>
         <div class="column">
           <h1 class="is-size-3">Dark Phase</h1>
-          <img src="{{ microscan_img_dark }}" alt="https://via.placeholder.com/300x300.png" />
+          <img src="{{ microscan_img_dark }}" alt="https://via.placeholder.com/300x300.png"  width="350" height="350"/>
 
           <img src="{{ phase_img_line }}" alt="" />
           <h1 class="is-size-3">Line Phase</h1>
-          <img src="{{ microscan_img_line }}" alt="https://via.placeholder.com/300x300.png" />
+          <img src="{{ microscan_img_line }}" alt="https://via.placeholder.com/300x300.png"  width="350" height="350"/>
         </div>
         <div class="column">
           <h1 class="is-size-3">Light Phase</h1>
-          <img src="{{ microscan_img_light }}" alt="https://via.placeholder.com/300x300.png" />
+          <img src="{{ microscan_img_light }}" alt="https://via.placeholder.com/300x300.png"  width="350" height="350"/>
 
           <img src="{{ phase_img }}" alt="" />
           <h1 class="is-size-3">Distribution Plot</h1>
-          <img src="{{ microscan_img_dist }}" alt="https://via.placeholder.com/300x300.png" />
+          <img src="{{ microscan_img_dist }}" alt="https://via.placeholder.com/300x300.png"  width="350" height="350"/>
         </div>
 
       </div>
