created scraper page

--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -29,7 +29,7 @@
           <a href="{{ url_for('home') }}" class="navbar-item">
             <strong>Home</strong>
           </a>
-          <a href="{{ url_for('home') }}" class="navbar-item">
+          <a href="{{ url_for('scraper') }}" class="navbar-item">
             Scraper
           </a>
           <a href="{{ url_for('about') }}" class="button is-warning">
